--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,91 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.controller.MainActivity"
     android:focusableInTouchMode="true"
-    >
+    android:orientation="vertical"
+    android:padding="5dp"
+    tools:context="com.controller.MainActivity">
 
     <LinearLayout
+        android:id="@+id/header1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
         android:gravity="center"
-        android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal">
+
         <EditText
+            android:id="@+id/new_contacts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="New Contact"
-            android:paddingRight="40dp"
-            android:id="@+id/new_contacts"
             android:inputType="phone"
-            android:text="+91"
-            />
+            android:paddingRight="40dp"
+            android:text="+91" />
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:prompt="@string/spinner_prompt"
             android:entries="@array/spinner_array"/>
-        <Button
+
+        <ImageButton
+            android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/add"
-            android:hint="Add"
-            android:text="Add"
-            android:textAllCaps="false"
-            android:background="@color/button"
-            android:textColor="@color/colorAccent"
+            android:src="@mipmap/ic_add_user_color"
+            android:background="@color/white"
             />
 
     </LinearLayout>
 
     <ListView
         android:id="@+id/list_view"
+        android:layout_below="@+id/header1"
+        android:layout_above="@+id/footer1"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
+        android:padding="5dp"
         android:layout_gravity="center"
-        tools:listitem="@layout/spinner_list_items"
-        >
-
-
+        tools:listitem="@layout/spinner_list_items">
     </ListView>
-
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_alignParentBottom="true"
         android:gravity="center"
-        android:orientation="horizontal"
-        >
+        android:id="@+id/footer1"
+        android:orientation="horizontal">
 
-        <Button
+        <ImageButton
+            android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/delete"
-            android:text="Delete"
-            android:background="@color/button"
-            android:textColor="@color/colorAccent"
-            android:textAllCaps="false"
-            />
-        <Button
+            android:src="@mipmap/ic_stop_blocking"
+            android:background="@color/white" />
+
+        <ImageButton
             android:id="@+id/log"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/log"
-            android:background="@color/button"
-            android:textColor="@color/colorAccent"
-            android:textAllCaps="false"
-            />
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/ic_view_log"
+            android:background="@color/white" />
 
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
