--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:padding="5dp"
     tools:context="com.controller.MainActivity">
 
-    <LinearLayout
+    <!-- <LinearLayout
         android:id="@+id/header1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,11 +41,11 @@
             android:background="@color/white"
             />
 
-    </LinearLayout>
+    </LinearLayout> -->
 
     <ListView
         android:id="@+id/list_view"
-        android:layout_below="@+id/header1"
+        android:layout_alignParentTop="true"
         android:layout_above="@+id/footer1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -62,21 +62,100 @@
         android:gravity="center"
         android:id="@+id/footer1"
         android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/delete"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_stop_blocking"
-            android:background="@color/white" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:gravity="center"
+            >
+            <ImageButton
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_stop_blocking"
+                android:background="@color/white"
+                />
+            <TextView
+                android:id="@+id/delete_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
 
-        <ImageButton
-            android:id="@+id/log"
+                android:text="Stop Service"
+                />
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/ic_view_log"
-            android:background="@color/white" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:gravity="center"
+            >
+            <ImageButton
+                android:id="@+id/delete3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_add_user_color"
+                android:background="@color/white"
+                />
+            <TextView
+                android:id="@+id/delete_text3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Add Contact"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:gravity="center"
+            >
+            <ImageButton
+                android:id="@+id/delete4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_add_user_group"
+                android:background="@color/white"
+                />
+            <TextView
+                android:id="@+id/delete_text4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Add Group"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:gravity="center"
+            >
+            <ImageButton
+                android:id="@+id/log"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/ic_view_log"
+                android:background="@color/white" />
+            <TextView
+                android:id="@+id/log_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="View Log"
+                />
+        </LinearLayout>
 
 
     </LinearLayout>
