--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -7,19 +7,39 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/selectContact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!--<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/selectContact"
+            android:layout_width="20dp"
+            android:layout_height="20dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>-->
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_margin="5dp"
+        android:hint="Contact Name"
+        android:imeOptions="actionNext"
+        android:inputType="textPersonName"
+        />
 
     <EditText
         android:id="@+id/et_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_margin="15dp"
+        android:layout_margin="5dp"
         android:hint="Phone Number"
-        android:imeOptions="actionDone"
+        android:imeOptions="actionNext"
         android:inputType="phone"
         />
 
