--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -38,8 +38,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_margin="5dp"
-        android:hint="Phone Number"
-        android:imeOptions="actionNext"
+        android:hint="Contact Number"
+        android:imeOptions="actionDone"
         android:inputType="phone"
         />
 
