--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -62,10 +62,10 @@
         android:id="@+id/contact_log_date_time"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="1.3"
         android:orientation="vertical"
         android:paddingTop="8dp"
-        android:layout_margin="5dp"
+        android:layout_gravity="right"
         >
         <TextView
             android:id="@+id/contact_log_date"
