--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context="com.controller.MainActivity">
+    tools:context="com.controller.com.call.block.group.controller.MainActivity">
 
     <LinearLayout
 
@@ -119,7 +119,7 @@
 
     </LinearLayout>
 
-    <!-- <LinearLayout
+     <!--<LinearLayout
         android:id="@+id/header1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
