--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -43,6 +43,18 @@
         android:inputType="phone"
         />
 
+    <Spinner
+        android:id="@+id/block_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:prompt="@string/spinner_prompt"
+        android:entries="@array/block_number_type"
+        android:layout_gravity="center"
+        android:gravity="center"
+        >
+
+    </Spinner>
+
     <RadioGroup
         android:id="@+id/radio_grp"
         android:layout_width="match_parent"
