--- a/app/src/main/res/layout/activity_contact_list_with_Image.xml
+++ b/app/src/main/res/layout/activity_contact_list_with_Image.xml
@@ -61,14 +61,20 @@
     <LinearLayout
         android:id="@+id/contact_log_date_time"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1.3"
         android:orientation="vertical"
         android:layout_gravity="right"
         >
         <ImageButton
-            android:id="@+id/img_type"
+            android:id="@+id/action_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/action_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
 </LinearLayout>
