--- a/app/src/main/res/layout/dialog_add_contact.xml
+++ b/app/src/main/res/layout/dialog_add_contact.xml
@@ -45,13 +45,14 @@
 
     <Spinner
         android:id="@+id/block_type"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:prompt="@string/spinner_prompt"
         android:entries="@array/block_number_type"
         style="?android:attr/spinnerItemStyle"
         android:layout_gravity="center"
         android:gravity="center"
+        android:padding="8dp"
         >
 
     </Spinner>
@@ -62,6 +63,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:paddingTop="5dp"
         >
         <RadioButton
             android:id="@+id/block"
