--- a/app/src/main/res/layout/activity_contact_list.xml
+++ b/app/src/main/res/layout/activity_contact_list.xml
@@ -66,7 +66,9 @@
         android:orientation="vertical"
         android:layout_gravity="right"
         >
-        <ImageButton
+        <ImageView
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:id="@+id/img_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
