--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-    tools:context="com.call.block.group.controller.LogActivity">
+    tools:context="com.call.block.group.callblocker.call.block.group.controller.LogActivity">
 
     <LinearLayout
         android:id="@+id/lin_bottom"
