--- a/app/src/main/res/layout/activity_log_picker.xml
+++ b/app/src/main/res/layout/activity_log_picker.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.call.block.group.controller.LogPickerActivity">
+    tools:context="com.call.block.group.callblocker.call.block.group.controller.LogPickerActivity">
 
     <ListView
         android:id="@+id/log_picker_list_view"
